--- a/hatfield-v1.1.html
+++ b/hatfield-v1.1.html
@@ -2675,6 +2675,7 @@
             background:#1b1b1b;
             font-weight:600;
             font-size:15px;
+            color:white;
         }
         
         .get-started-toggle a {
